--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
     "tailwindcss": "^2.2.4"
   },
   "devDependencies": {
