--- a/app_interface/package.json
+++ b/app_interface/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "nodemon": "^2.0.12"
   }
 }
