--- a/app_interface/package.json
+++ b/app_interface/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
-    "mysql": "^2.18.1",
+    "mariadb": "^2.5.4",
     "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
