--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,19 @@
   "description": "Review service for course assignments",
   "main": "index.js",
   "scripts": {
-    "build-css": "tailwindcss build -i src/styles.css -o public/styles/styles.css",
-    "start": "npx live-server public"
+    "build-css": "tailwindcss build -i src/styles.css -o public/stylesheets/styles.css",
+    "start": "npx live-server views"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
-    "tailwindcss": "^2.2.4"
+    "mariadb": "^2.5.4",
+    "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "nodemon": "^2.0.12"
   }
 }
